First attempt for side chain & confirmations
