# packages/api/src/controllers/cBlock.ts
@@ -18,14 +18,16 @@ class Block implements iController {
   private initializeRoutes() {
     this.router.get(`${this.path}`, stringValidator(), this.getLatestBlocks);
     this.router.get(`${this.path}/:hash`, stringValidator(), this.getBlockByHash);
-    this.router.get(`${this.path}/:hash/transactions`, stringValidator(), this.getTransactionsForBlock);
+    this.router.get(`${this.path}/:hash/confirmations`, stringValidator(), this.getBlockConfirmations);
+    this.router.get(`${this.path}/:hash/transactions`, stringValidator(), this.getBlockTransactions);
   }
 
   private getLatestBlocks = async (request: Request, response: Response) => {
     const qB = this.repository.createQueryBuilder("block")
     .innerJoinAndSelect("block.miner", "miner")
+    .where("block.onMainChain = true")
     .orderBy("block.height", "DESC")
-    if (request.query.afterId !== undefined) qB.where("block.id < " + request.query.afterId.toString());
+    if (request.query.afterId !== undefined) qB.andWhere("block.id < " + request.query.afterId.toString());
     request.query.limit === undefined || Number(request.query.limit) > 100 ? qB.limit(10) : qB.limit(Number(request.query.limit.toString()));
 
     await qB.getMany()
@@ -51,8 +53,8 @@ class Block implements iController {
       where: { hash : blockHash },
       order: { "height": "DESC" }
     })
-    .then(blocks => {
-      return response.json(blocks);
+    .then(block => {
+      return response.json(block);
     })
     .catch((error) => {
       debug.log(error);
@@ -60,7 +62,22 @@ class Block implements iController {
     });
   }
 
-  private getTransactionsForBlock = async (request: Request, response: Response) => {
+  private getBlockConfirmations = async (request: Request, response: Response) => {
+    const blockHash = request.params.hash;
+    await this.repository.createQueryBuilder("block")
+    .select("(SELECT MAX(height) FROM block) - block.height", "confirmations")
+    .where("block.hash = :hash", { hash: blockHash })
+    .getRawOne()
+    .then(block => {
+      return response.json(block);
+    })
+    .catch((error) => {
+      debug.log(error);
+      return response.sendStatus(500)
+    });
+  }
+
+  private getBlockTransactions = async (request: Request, response: Response) => {
     const blockHash = request.params.hash;
     await createQueryBuilder(mTransaction, "transaction")
     .innerJoin("transaction.block", "block")
